force-app/main/default/objects/Quiz__c/Quiz__c.object-meta.xml
<CustomObject>
    <label>Quiz</label>
    <nameField>
        <label>Quiz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>