force-app/main/default/objects/Quiz__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this quiz is currently active and available to learners</description>
    <inlineHelpText>Uncheck to deactivate this quiz without archiving it</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>