force-app/main/default/objects/Quiz__c/fields/Allow_Retakes__c.field-meta.xml
<CustomField>
    <fullName>Allow_Retakes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether learners can retake this quiz after completing it</description>
    <inlineHelpText>Check to allow learners to retake this quiz multiple times</inlineHelpText>
    <label>Allow Retakes</label>
    <type>Checkbox</type>
</CustomField>