force-app/main/default/objects/Quiz__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this quiz has been archived (soft delete)</description>
    <inlineHelpText>Check to archive this quiz (prevents deletion but hides from learners)</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>