force-app/main/default/objects/Quiz__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course this quiz is associated with (for course-level quizzes)</description>
    <inlineHelpText>Select the course this quiz belongs to (required if Level = Course)</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Quizzes</relationshipLabel>
    <relationshipName>Quizzes</relationshipName>
    <type>Lookup</type>
</CustomField>