force-app/main/default/objects/Quiz__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lesson this quiz is associated with (for lesson-level quizzes)</description>
    <inlineHelpText>Select the lesson this quiz belongs to (required if Level = Lesson)</inlineHelpText>
    <label>Lesson</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Quizzes</relationshipLabel>
    <relationshipName>Quizzes</relationshipName>
    <type>Lookup</type>
</CustomField>