force-app/main/default/objects/Quiz__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Indicates whether this quiz is at the Lesson, Module, or Course level</description>
    <inlineHelpText>Select the level at which this quiz applies</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lesson</fullName>
                <default>true</default>
                <label>Lesson</label>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>