force-app/main/default/objects/Quiz__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Total points available for this quiz (can be derived from question points)</description>
    <inlineHelpText>Optional: Enter the maximum score for this quiz. If blank, it will be calculated from question points.</inlineHelpText>
    <label>Max Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>