force-app/main/default/objects/Quiz__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Determines the quiz behavior. Training mode allows learners to see explanations after answering. Exam mode hides explanations.</description>
    <inlineHelpText>Training: Shows explanations after each answer. Exam: No explanations shown.</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exam</fullName>
                <default>true</default>
                <label>Exam</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>