force-app/main/default/objects/Quiz__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional - for module-level quizzes</inlineHelpText>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Quizzes</relationshipLabel>
    <relationshipName>Quizzes</relationshipName>
    <type>Lookup</type>
</CustomField>