force-app/main/default/objects/Quiz__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <description>Percentage score required to pass this quiz (0-100)</description>
    <inlineHelpText>Enter the percentage score required to pass (e.g., 70 for 70%)</inlineHelpText>
    <label>Passing Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>