force-app/main/default/objects/Quiz__c/fields/Shuffle_Questions__c.field-meta.xml
<CustomField>
    <fullName>Shuffle_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Randomize question order for each attempt</inlineHelpText>
    <label>Shuffle Questions</label>
    <type>Checkbox</type>
</CustomField>