force-app/main/default/objects/Quiz__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Sort order for this quiz (if multiple quizzes exist)</description>
    <inlineHelpText>Enter a number to control the display order (lower numbers appear first)</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>