force-app/main/default/objects/Quiz__c/fields/Time_Limit_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit_Minutes__c</fullName>
    <inlineHelpText>Optional time limit for quiz completion</inlineHelpText>
    <label>Time Limit Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>